SQuirreL SQL Client Change Log
==============================

Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements:

Graph Plugin:
 - Allowed constraints to be created using drag and drop.
   To create such a non DB constraint using drag and drop hold
   down the control key. Then right click the constraint to configure it.  

 - Updated Korean translation available (Thanks to Youngwoo Kim)


Bug-Fixes:

2754166: SQLScript plugin loses precision for Timestamp in H2
2746982: Error occured in IPlugin.sessionEnded() for SQL Parametrisation
2713952: Create table script (on Sybase): Always generate "datetime" type for "date" (and datetime)
2657987: Session was closed even if session closing confirm dialog was not confirmed. Connection was not 
         closed then.

3.0.1 (3/23/2009)
================

Enhancements:

 - New Korean translation available (Thanks to Youngwoo Kim)

Bug-Fixes:

2686268: OS X Look and Feel is Incorrect
2645286: Quotes missing in squirrel-sql.sh (Thanks to mdykierek for the patch)
2531193: Oracle create table script the "ON UPDATE" is wrong
2644778: "Contents Tab SQL filter" and "Limit cell edit WHERE clause size" dialogs didn't work

Other reported bug-fixes:

 - Fixed UI freeze issue which sometimes occurred when using software update feature.

 - Better support for PointBase 5.7

 - Fixed bug which caused NullPointerException in Refactoring when modifying column types
 
 - Fixed bug which occurred when generating FK SQL for DB2 where the update and delete action clause result 
   in syntax error for certain standard constraint actions.
 
 - Fixed the case of the install directory (java -> Java) to match the case of the directory created by the 
   installer. 

 - NullPointerException occured when last tab was closed

 - Fixed several problems when Schemas where cached. For example, "Contents Tab SQL filter" and 